--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="Inggris">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta
