--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,20 +1,24 @@
 {% extends 'base.html' %}
+{% load static %}
 
 
 {% block content %}
-<style>
-    .list-link {
-        list-style-type: none;
-    }
-</style>
 
 <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container-fluid d-flex flex-row">
       <a class="navbar-brand" href="#">
         <img src="https://th.bing.com/th/id/OIP.AvspTpBxlo8rlUhLwCHVNwHaFj?pid=ImgDet&w=185&h=138&c=7&dpr=1,5" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         LiteraLoka
       </a>
+      <div>
+        <a href="#"><button style="border-radius: 8px;">Review</button></a>
+        <a href="#"><button style="border-radius: 8px;">Resensi</button></a>
+        <a href="#"><button style="border-radius: 8px;">Jual</button></a>
+        <a href="#"><button style="border-radius: 8px;"><img src="https://th.bing.com/th/id/R.672ae334c8366021fd588786f054cb2d?rik=5OKBZlZEdbRDrA&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_225646.png&ehk=Tjxw1TwcwdV5%2ftOEQVrvqgnbn0XKd%2fweSJ6aBiXxKB0%3d&risl=&pid=ImgRaw&r=0" width="28" height="20" alt="Logo"></button></a>
+        <a href="{% url 'main:login' %}"><button style="border-radius: 8px;">Login</button></a>
+      </div>
     </div>
+    
   </nav>
 
 
@@ -22,34 +26,22 @@
 
 <div class="main-container d-flex p-3 flex-row">
     <div class="content-page">
-        <h1>Nama page: </h1>
-        <p>{{ namapage }}<p>
-        
-            <table>
-                <tr>
-                    <th>Title</th>
-                    <th>Language</th>
-                    <th>Author</th>
-                    <th>Category</th>
-                    <th>Year Published</th>
-                    <th>Thumbnail</th>
-                </tr>
-            
-                {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
-            
-        
-                {% for buku in kumpulanbuku %}
-                    <tr>
-        
-                        <td>{{buku.title}}</td>
-                        <td>{{buku.lang}}</td>
-                        <td>{{buku.author}}</td>
-                        <td>{{buku.category}}</td>
-                        <td>{{buku.publication_date}}</td>
-                        <td><img src = "{{buku.image_url}}" width="200"></td>
-                    </tr>
-                {% endfor %}
-            </table>
+                <div class="d-flex justify-content-start d-grid gap-3 flex-wrap m-3"">
+                
+                
+                    {% for buku in kumpulanbuku %}
+                        <div class="" style="width: 10rem;" id="product_table">
+                            <img src="{{ buku.image_url }}" class="card-img-top " alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title">{{ buku.title }}</h5>
+                            <p class="card-text">{{ buku.category }}</p>
+                            <a href="#" class="btn btn-primary">Lihat detail</a>
+                            </div>
+                        </div>
+                        <tr>
+                        </tr>
+                    {% endfor %}
+                </div>
         
             <br />
         
@@ -59,7 +51,7 @@
                 </button>
             </a>
     </div>
-    <div class="listpage border border-black w-30 p-2 m-2">
+    <div class="listpage">
         <h3>Contributor:</h3>
         <ol>
             <li>Fernando Valentino Sitinjak (2206081332)</li>
@@ -70,7 +62,7 @@
             <li>Leticia Kalila Darlene (2206830561)</li>
         </ol>
         <h3>Hyperlink:</h3>
-        <div class="list-link">
+        <div class="list-link" style="list-style-type: none;">
             <ul>
                 <li><a>Admin Site</a></li>
                 <li><a>Shop</a></li>
@@ -80,10 +72,12 @@
     </div>  
     
 </div>
-<a href="{% url 'main:logout' %}">
+<a href="{% url 'main:logout' %}"">
     <button>
         Logout
     </button>
 </a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 
 {% endblock content %}
