modul review minus css

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -85,5 +85,10 @@
         Logout
     </button>
 </a>
+<a href="{% url 'main:login' %}">
+    <button>
+        Login
+    </button>
+</a>
 
 {% endblock content %}
