Menyelesaikan modul Jual Buku

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -13,15 +13,13 @@
       <div>
         <a href="#"><button style="border-radius: 8px;">Review</button></a>
         <a href="#"><button style="border-radius: 8px;">Resensi</button></a>
-        <a href="#"><button style="border-radius: 8px;">Jual</button></a>
+        <a href="{% url 'jualbuku:jual_buku' %}"><button style="border-radius: 8px;">Jual</button></a>
         <a href="#"><button style="border-radius: 8px;"><img src="https://th.bing.com/th/id/R.672ae334c8366021fd588786f054cb2d?rik=5OKBZlZEdbRDrA&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_225646.png&ehk=Tjxw1TwcwdV5%2ftOEQVrvqgnbn0XKd%2fweSJ6aBiXxKB0%3d&risl=&pid=ImgRaw&r=0" width="28" height="20" alt="Logo"></button></a>
         <a href="{% url 'main:login' %}"><button style="border-radius: 8px;">Login</button></a>
       </div>
     </div>
     
   </nav>
-
-
 
 
 <div class="main-container d-flex p-3 flex-row">
