--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block meta %}
-    <title>Login</title>
+    <title>Login as User</title>
 {% endblock meta %}
 
 {% block content %}
