--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -6,20 +6,30 @@
 
 <nav class="navbar bg-body-tertiary">
     <div class="container-fluid d-flex flex-row">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{% url 'main:show_main' %}">
         <img src="https://th.bing.com/th/id/OIP.AvspTpBxlo8rlUhLwCHVNwHaFj?pid=ImgDet&w=185&h=138&c=7&dpr=1,5" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         LiteraLoka
       </a>
-      <div>
-        <a href="#"><button style="border-radius: 8px;">Review</button></a>
-        <a href="#"><button style="border-radius: 8px;">Resensi</button></a>
-        <a href="#"><button style="border-radius: 8px;">Jual</button></a>
-        <a href="#"><button style="border-radius: 8px;"><img src="https://th.bing.com/th/id/R.672ae334c8366021fd588786f054cb2d?rik=5OKBZlZEdbRDrA&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_225646.png&ehk=Tjxw1TwcwdV5%2ftOEQVrvqgnbn0XKd%2fweSJ6aBiXxKB0%3d&risl=&pid=ImgRaw&r=0" width="28" height="20" alt="Logo"></button></a>
-        <a href="{% url 'main:login' %}"><button style="border-radius: 8px;">Login</button></a>
+      <div style="display: flex; flex-direction: row;">
+        <button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="https://cdn.icon-icons.com/icons2/1710/PNG/512/addplussignoutline_112526.png" width="20" height="20" alt="Tambah buku"></button>
+        <a href="#"><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;"><img src="https://th.bing.com/th/id/R.672ae334c8366021fd588786f054cb2d?rik=5OKBZlZEdbRDrA&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_225646.png&ehk=Tjxw1TwcwdV5%2ftOEQVrvqgnbn0XKd%2fweSJ6aBiXxKB0%3d&risl=&pid=ImgRaw&r=0" width="28" height="20" alt="Logo"></button></a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'main:logout' %}""><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;">Logout</button></a>
+        {% else %}
+            <a href="{% url 'main:login' %}""><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;">Login</button></a>
+        {% endif %}
+        <div class="dropdown" style="padding-right: 2px;">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img width="20" height="25" src="https://static.vecteezy.com/system/resources/previews/000/582/257/non_2x/bulleted-list-icon-vector-illustration.jpg"></img></button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Resensi</a></li>
+              <li><a class="dropdown-item" href="#">Review</a></li>
+              <li><a class="dropdown-item" href="#">Jual</a></li>
+              <li><a href="{% url 'inventory_management:literaloka_admin' %}" class="dropdown-item" href="#">Manajemen Inventory</a></li>
+            </ul>
+          </div>
       </div>
     </div>
-    
-  </nav>
+</nav>
 
 
 
