--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -11,7 +11,6 @@
         LiteraLoka
       </a>
       <div style="display: flex; flex-direction: row;">
-        <button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="https://cdn.icon-icons.com/icons2/1710/PNG/512/addplussignoutline_112526.png" width="20" height="20" alt="Tambah buku"></button>
         <a href="#"><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;"><img src="https://th.bing.com/th/id/R.672ae334c8366021fd588786f054cb2d?rik=5OKBZlZEdbRDrA&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_225646.png&ehk=Tjxw1TwcwdV5%2ftOEQVrvqgnbn0XKd%2fweSJ6aBiXxKB0%3d&risl=&pid=ImgRaw&r=0" width="28" height="20" alt="Logo"></button></a>
         {% if user.is_authenticated %}
             <a href="{% url 'main:logout' %}""><button style="margin-top: 2px; margin-left: 2px; margin-right: 2px; border-radius: 8px; height: 35px;">Logout</button></a>
@@ -24,7 +23,8 @@
               <li><a class="dropdown-item" href="#">Resensi</a></li>
               <li><a class="dropdown-item" href="#">Review</a></li>
               <li><a class="dropdown-item" href="#">Jual</a></li>
-              <li><a href="{% url 'inventory_management:literaloka_admin' %}" class="dropdown-item" href="#">Manajemen Inventory</a></li>
+              <li><a href="{% url 'inventory_management:literaloka_admin' %}" class="dropdown-item" href="#">Inventory</a></li>
+              <li><a class="dropdown-item" href="#">Wishlist</a></li>
             </ul>
           </div>
       </div>
@@ -36,58 +36,70 @@
 
 <div class="main-container d-flex p-3 flex-row">
     <div class="content-page">
-                <div class="d-flex justify-content-start d-grid gap-3 flex-wrap m-3"">
-                
-                
-                    {% for buku in kumpulanbuku %}
-                        <div class="" style="width: 10rem;" id="product_table">
-                            <img src="{{ buku.image_url }}" class="card-img-top " alt="...">
-                            <div class="card-body">
-                            <h5 class="card-title">{{ buku.title }}</h5>
-                            <p class="card-text">{{ buku.category }}</p>
-                            <a href="#" class="btn btn-primary">Lihat detail</a>
-                            </div>
-                        </div>
-                        <tr>
-                        </tr>
-                    {% endfor %}
-                </div>
-        
-            <br />
-        
-            <a href="{% url 'main:create_product' %}">
-                <button>
-                    Add New Product
-                </button>
-            </a>
+                <div class="d-flex d-grid gap-3 flex-wrap m-3" style="justify-content: space-evenly;" id="product_table"></div>
     </div>
-    <div class="listpage">
-        <h3>Contributor:</h3>
-        <ol>
-            <li>Fernando Valentino Sitinjak (2206081332)</li>
-            <li>Muhammad Hilmy Erryanto (2206025905)</li>
-            <li>Fathirahma Alyssa Pristanti (2206082215)</li>
-            <li>Chika Marsya Diandra Lumban Gaol (2206083344)</li>
-            <li>Pradipta Arya Pramudita (2206083685)</li>
-            <li>Leticia Kalila Darlene (2206830561)</li>
-        </ol>
-        <h3>Hyperlink:</h3>
-        <div class="list-link" style="list-style-type: none;">
-            <ul>
-                <li><a>Admin Site</a></li>
-                <li><a>Shop</a></li>
-                <li><a>Shopping cart & Checkout</a></li>
-            </ul>
-        </div>
-    </div>  
     
 </div>
-<a href="{% url 'main:logout' %}"">
-    <button>
-        Logout
-    </button>
-</a>
 
-<h5>Sesi terakhir login: {{ last_login }}</h5>
+{% if user.is_authenticated %}
+    <h3>Account: {{ name }}</h3>
+{% endif %}
+
+<script> 
+    async function getBuku() {
+        return fetch("{% url 'inventory_management:get_product_json' %}").then((res) => res.json())
+    }
+
+    var macamBahasa = document.querySelectorAll('input[class="lang-filter"]');
+    var bahasaDifilter = [];
+
+    macamBahasa.forEach(function(checkbox) {
+        checkbox.addEventListener('change', function() {
+            if (this.checked) {
+                bahasaDifilter.push(this.value)
+            }
+        })
+    });
+
+
+    async function refreshProducts() {
+        document.getElementById("product_table").innerHTML = ""
+        const kumpulanbuku = await getBuku()
+        let htmlString = ''
+            kumpulanbuku.forEach((buku) => {
+                    htmlString += `<div class="bg-body-tertiary" style="width: 12rem; border-style: solid; border-radius: 8px;" id="product_table">
+                                    <img src="${buku.fields.image_url}" class="card-img-top " alt="..." width="200" height="200">
+                                    <div class="card-body" style="margin: 2px 2px; padding: 2px;">
+                                        <h5 class="card-title overflow-auto" style="height: 70px;">${buku.fields.title}</h5>
+                                        <p class="card-text overflow-auto" style="height: 50px;">${buku.fields.description}</p>
+                                    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+                                        <a href="#"><button style="border-radius: 8px;">Lihat Detail</button></a>
+                                        <a href="/delete-buku/${buku.pk}"><button style="border-radius: 8px">🗑️</button></a>
+                                    </div>
+                                    </div>
+                                </div>` 
+                }
+        )
+        
+        document.getElementById("product_table").innerHTML = htmlString
+    }
+    
+    refreshProducts()
+
+    function addBuku() {
+        fetch("{% url 'inventory_management:add_buku_ajax' %}", {
+            method: "POST",
+            body: new FormData(document.querySelector('#form'))
+        }).then(refreshProducts)
+        
+        document.getElementById("form").reset()
+        return false
+    }
+    
+    document.getElementById("button_add").onclick = addBuku
+
+
+</script>
+
 
 {% endblock content %}
