--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -112,6 +112,7 @@
                                     <div style="display: flex; flex-direction: row; justify-content: space-between;">
                                         <a href="#"><button style="border-radius: 8px;">Lihat Detail</button></a>
                                         <a href="/delete-buku/${buku.pk}"><button style="border-radius: 8px">🗑️</button></a>
+                                        <button type="submit" class="btn btn-primary add-to-cart-button" book-id="{{buku.id}}">Add to Cart</button>
                                     </div>
                                     </div>
                                 </div>` 
